# testing-things

./: Cargo.toml  README.md  index.html
.github/workflows/: bench.yml  deploy-docs.yml
benches/: another_bench.rs  test_bench.rs
dev/bench/: data.js
docs/: README.md
docs/_build/html/: index.html
rust/: Cargo.toml
rust/benches/: test_bench.rs  third_bench.rs
rust/src/: lib.rs
src/: lib.rs
