[package]
name = "testing-things"
version = "0.1.0"
edition = "2024"

[dependencies]
kdam = "0.6.3"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "test_bench"
harness = false

[[bench]]
name = "another_bench"
harness = false

[[bench]]
name = "third_bench"
harness = false

[lib]
bench = false

[[bin]]
name = "testing-things"
path = "src/main.rs"
bench = false